--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -1,25 +1,3 @@
-@article{bokhorst2015compliance,
-title={Compliance rates with the {Prostate Cancer Research International Active Surveillance (PRIAS)} protocol and disease reclassification in noncompliers},
-author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and {\relax PRIAS study group}},
-journal={European Urology},
-volume={68},
-number={5},
-pages={814--821},
-year={2015},
-publisher={Elsevier}
-}
-
-@article{lange1989robust,
-  title={Robust statistical modeling using the t distribution},
-  author={Lange, Kenneth L and Little, Roderick JA and Taylor, Jeremy MG},
-  journal={Journal of the American Statistical Association},
-  volume={84},
-  number={408},
-  pages={881--896},
-  year={1989},
-  publisher={Taylor \& Francis Group}
-}
-
 @article{pearson1994mixed,
   title={Mixed-effects regression models for studying the natural history of prostate disease},
   author={Pearson, Jay D and Morrell, Christopher H and Landis, Patricia K and Carter, H Ballentine and Brant, Larry J},
@@ -29,6 +7,62 @@ publisher={Elsevier}
   pages={587--601},
   year={1994},
   publisher={Wiley Online Library}
+}
+
+@article{loeb2014heterogeneity,
+  title={Heterogeneity in active surveillance protocols worldwide},
+  author={Loeb, Stacy and Carter, H Ballentine and Schwartz, Mark and Fagerlin, Angela and Braithwaite, R Scott and Lepor, Herbert},
+  journal={Reviews in urology},
+  volume={16},
+  number={4},
+  pages={202},
+  year={2014},
+  publisher={MedReviews, LLC}
+}
+
+@article{eilers1996flexible,
+title={Flexible smoothing with {B-splines} and penalties},
+author={Eilers, Paul HC and Marx, Brian D},
+journal={Statistical Science},
+pages={89--121},
+year={1996},
+volume={11},
+number={2},
+publisher={Institute of Mathematical Statistics}
+}
+
+
+@article{cooperberg2011outcomes,
+  title={Outcomes of active surveillance for men with intermediate-risk prostate cancer},
+  author={Cooperberg, Matthew R and Cowan, Janet E and Hilton, Joan F and Reese, Adam C and Zaid, Harras B and Porten, Sima P and Shinohara, Katsuto and Meng, Maxwell V and Greene, Kirsten L and Carroll, Peter R},
+  journal={Journal of Clinical Oncology},
+  volume={29},
+  number={2},
+  pages={228},
+  year={2011},
+  publisher={American Society of Clinical Oncology}
+}
+
+@article{bul2013active,
+  title={Active surveillance for low-risk prostate cancer worldwide: the PRIAS study},
+  author={Bul, Meelan and Zhu, Xiaoye and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Rannikko, Antti and Bjartell, Anders and Van Der Schoot, Deric K and Cornel, Erik B and Conti, Giario N and others},
+  journal={European urology},
+  volume={63},
+  number={4},
+  pages={597--603},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{lopez2014optimalcutpoints,
+title={{OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests}},
+author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Cadarso-Su{\'a}rez, Carmen and Gude-Sampedro, Francisco},
+journal={Journal of Statistical Software},
+volume={61},
+number={8},
+pages={1--36},
+year={2014},
+publisher={Foundation for Open Access Statistics}
 }
 
 @article{lin2000latent,
@@ -42,124 +76,70 @@ publisher={Elsevier}
   publisher={Wiley Online Library}
 }
 
-@article{gentleman1994maximum,
-  title={Maximum likelihood for interval censored data: {Consistency} and computation},
-  author={Gentleman, Robert and Geyer, Charles J},
-  journal={Biometrika},
-  volume={81},
-  number={3},
-  pages={618--623},
-  year={1994},
-  publisher={Oxford University Press}
-}
-
-@article{klotz2009clinical,
-  title={Clinical results of long-term follow-up of a large, active surveillance cohort with localized prostate cancer},
-  author={Klotz, Laurence and Zhang, Liying and Lam, Adam and Nam, Robert and Mamedov, Alexandre and Loblaw, Andrew},
-  journal={Journal of Clinical Oncology},
-  volume={28},
-  number={1},
-  pages={126--131},
-  year={2009},
-  publisher={American Society of Clinical Oncology}
-}
-
-@article{loeb2016immediate,
-  title={Immediate versus delayed prostatectomy: {Nationwide} population-based study},
-  author={Loeb, Stacy and Folkvaljon, Yasin and Robinson, David and Makarov, Danil V and Bratt, Ola and Garmo, Hans and Stattin, P{\"a}r},
-  journal={Scandinavian journal of urology},
-  volume={50},
-  number={4},
-  pages={246--254},
-  year={2016},
-  publisher={Taylor \& Francis}
-}
-
-@article{huang2009latent,
-  title={Latent-model robustness in joint models for a primary endpoint and a longitudinal process},
-  author={Huang, Xianzheng and Stefanski, Leonard A and Davidian, Marie},
-  journal={Biometrics},
-  volume={65},
-  number={3},
-  pages={719--727},
-  year={2009},
+@article{schroder1992tnm,
+  title={The TNM classification of prostate cancer},
+  author={Schr{\"o}der, FH and Hermanek, P and Denis, L and Fair, WR and Gospodarowicz, MK and Pavone-Macaluso, M},
+  journal={The Prostate},
+  volume={21},
+  number={S4},
+  pages={129--138},
+  year={1992},
   publisher={Wiley Online Library}
 }
 
-@article{rizopoulos2008shared,
-  title={Shared parameter models under random effects misspecification},
-  author={Rizopoulos, Dimitris and Verbeke, Geert and Molenberghs, Geert},
-  journal={Biometrika},
-  volume={95},
-  number={1},
-  pages={63--74},
-  year={2008},
-  publisher={Oxford University Press}
+@article{GlobalCancerStats2012,
+title={Global cancer statistics, 2012},
+author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
+journal={CA: A Cancer Journal for Clinicians},
+volume={65},
+number={2},
+pages={87--108},
+year={2015},
+publisher={Wiley}
 }
 
-@article{proust2014joint,
-  title={Joint latent class models for longitudinal and time-to-event data: A review},
-  author={Proust-Lima, C{\'e}cile and S{\'e}ne, Mb{\'e}ry and Taylor, Jeremy MG and Jacqmin-Gadda, H{\'e}l{\`e}ne},
-  journal={Statistical methods in medical research},
-  volume={23},
-  number={1},
-  pages={74--90},
-  year={2014},
-  publisher={Sage Publications Sage UK: London, England}
+@article{potoskyPSAcancer,
+author = {Potosky, Arnold L and Miller, Barry A and Albertsen, Peter C and Kramer, Barnett S},
+title = {The role of increasing detection in the rising incidence of prostate cancer},
+journal = {JAMA},
+volume = {273},
+number = {7},
+pages = {548-552},
+year = {1995},
+publisher={American Medical Association}
 }
 
-@article{vickers2006decision,
-  title={Decision curve analysis: a novel method for evaluating prediction models},
-  author={Vickers, Andrew J and Elkin, Elena B},
-  journal={Medical Decision Making},
-  volume={26},
-  number={6},
-  pages={565--574},
-  year={2006},
-  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
-}
-
-@article{razali2013mixture,
-  title={Mixture {Weibull} distributions for fitting failure times data},
-  author={Razali, Ahmad Mahir and Al-Wakeel, Ali A},
-  journal={Applied Mathematics and Computation},
-  volume={219},
-  number={24},
-  pages={11358--11364},
-  year={2013},
-  publisher={Elsevier}
-}
-
-@article{coley2017,
-title = {Prediction of the Pathologic {Gleason} Score to Inform a Personalized Management Program for Prostate Cancer},
-journal = {European Urology},
-volume = {72},
-number = {1},
-pages = {135--141},
-year = {2017},
-author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pienta, Kenneth J and Carter, Herbert Ballentine}
-}
-
-@article{esserman2014addressing,
-  title={Addressing overdiagnosis and overtreatment in cancer: a prescription for change},
-  author={Esserman, Laura J and Thompson, Ian M and Reid, Brian and Nelson, Peter and Ransohoff, David F and Welch, H Gilbert and Hwang, Shelley and Berry, Donald A and Kinzler, Kenneth W and Black, William C and Bissell, Mina and Parnes, Howard and Srivastava, Sudhir},
-  journal={The lancet oncology},
-  volume={15},
-  number={6},
-  pages={e234--e242},
+@article{ehdaie2014impact,
+  title={The impact of repeat biopsies on infectious complications in men with prostate cancer on active surveillance},
+  author={Ehdaie, Behfar and Vertosick, Emily and Spaliviero, Massimiliano and Giallo-Uvino, Anna and Taur, Ying and O'sullivan, Maryellen and Livingston, Jennifer and Sogani, Pramod and Eastham, James and Scardino, Peter and others},
+  journal={The Journal of urology},
+  volume={191},
+  number={3},
+  pages={660--664},
   year={2014},
   publisher={Elsevier}
 }
 
-@article{nieboer2015nonlinear,
-  title={Nonlinear modeling was applied thoughtfully for risk prediction: the {Prostate Biopsy Collaborative Group}},
-  author={Nieboer, Daan and Vergouwe, Yvonne and Roobol, Monique J and Ankerst, Donna P and Kattan, Michael W and Vickers, Andrew J and Steyerberg, Ewout W and {\relax the Prostate Biopsy Collaborative Group}},
-  journal={Journal of clinical epidemiology},
-  volume={68},
-  number={4},
-  pages={426--434},
-  year={2015},
-  publisher={Elsevier}
+@article{welty2015extended,
+title={Extended followup and risk factors for disease reclassification in a large active surveillance cohort for localized prostate cancer},
+author={Welty, Christopher J and Cowan, Janet E and Nguyen, Hao and Shinohara, Katsuto and Perez, Nannette and Greene, Kirsten L and Chan, June M and Meng, Maxwell V and Simko, Jeffry P and Cooperberg, Matthew R and Carroll, Peter R},
+journal={The Journal of Urology},
+volume={193},
+number={3},
+pages={807--811},
+year={2015},
+publisher={Elsevier}
+}
+
+@article{bokhorst2015compliance,
+title={Compliance rates with the {Prostate Cancer Research International Active Surveillance (PRIAS)} protocol and disease reclassification in noncompliers},
+author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and {\relax PRIAS study group}},
+journal={European Urology},
+volume={68},
+number={5},
+pages={814--821},
+year={2015},
+publisher={Elsevier}
 }
 
 @article{zhang2012optimization,
@@ -171,6 +151,68 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
   pages={529--547},
   year={2012},
   publisher={INFORMS}
+}
+
+@article{tsiatis2004joint,
+title={Joint modeling of longitudinal and time-to-event data: an overview},
+author={Tsiatis, Anastasios A and Davidian, Marie},
+journal={Statistica Sinica},
+volume={14},
+number={3},
+pages={809--834},
+year={2004},
+publisher={Institute of Statistical Science, Academia Sinica}
+}
+
+@article{rizopoulosJMbayes,
+author = {Dimitris Rizopoulos},
+title = {The {R} Package {JMbayes} for Fitting Joint Models for Longitudinal and Time-to-Event Data Using {MCMC}},
+journal = {Journal of Statistical Software},
+volume = {72},
+number = {7},
+year = {2016},
+issn = {1548-7660},
+pages = {1--46},
+publisher={Foundation for Open Access Statistics}
+}
+
+@article{landmarking2017,
+  title={Dynamic predictions with time-dependent covariates in survival analysis using joint modeling and landmarking},
+  author={Rizopoulos, Dimitris and Molenberghs, Geert and Lesaffre, Emmanuel MEH},
+  journal={Biometrical Journal},
+  volume={59},
+  number={6},
+  pages={1261--1276},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{rizopoulos2011dynamic,
+title={Dynamic Predictions and Prospective Accuracy in Joint Models for Longitudinal and Time-to-Event Data},
+author={Rizopoulos, Dimitris},
+journal={Biometrics},
+volume={67},
+number={3},
+pages={819--829},
+year={2011},
+publisher={Wiley}
+}
+
+@book{rizopoulos2012joint,
+title={Joint Models for Longitudinal and Time-to-Event Data: With Applications in R},
+author={Rizopoulos, Dimitris},
+year={2012},
+publisher={CRC Press},
+isbn = {9781439872864}
+}
+
+@article{laird1982random,
+  title={Random-effects models for longitudinal data},
+  author={Laird, Nan M and Ware, James H},
+  journal={Biometrics},
+  pages={963--974},
+  year={1982},
+  publisher={JSTOR}
 }
 
 @article{erenay2014optimizing,
@@ -204,362 +246,4 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
   pages={1019--1034},
   year={2012},
   publisher={INFORMS}
-}
-
-@misc{priaswebsite,
-  author = {Roobol, Monique J and Bangma, Chris H},
-  title = {{PRIAS}},
-  howpublished = "\url{https://www.prias-project.org/}",
-  year = {2014}, 
-  note = "[Online; accessed 18-August-2014]"
-}
-
-@article{Gleason_interobs_var,
-title={Accuracy of biopsy {Gleason} scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
-author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
-journal={Urology},
-volume={51},
-number={4},
-pages={525--529},
-year={1998},
-publisher={Elsevier}
-}
-
-@article{rizopoulos2011dynamic,
-title={Dynamic Predictions and Prospective Accuracy in Joint Models for Longitudinal and Time-to-Event Data},
-author={Rizopoulos, Dimitris},
-journal={Biometrics},
-volume={67},
-number={3},
-pages={819--829},
-year={2011},
-publisher={Wiley}
-}
-
-
-@article{lopez2014optimalcutpoints,
-title={{OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests}},
-author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Cadarso-Su{\'a}rez, Carmen and Gude-Sampedro, Francisco},
-journal={Journal of Statistical Software},
-volume={61},
-number={8},
-pages={1--36},
-year={2014},
-publisher={Foundation for Open Access Statistics}
-}
-
-
-@article{cook1994equivalence,
-title={On the equivalence of constrained and compound optimal designs},
-author={Cook, R. Dennis and Wong, Weng K.},
-journal={Journal of the American Statistical Association},
-volume={89},
-number={426},
-pages={687--692},
-year={1994},
-publisher={Taylor \& Francis Group}
-}
-
-@article{lauter1976optimal,
-title={Optimal multipurpose designs for regression models},
-author={L{\"a}uter, E.},
-journal={Mathematische Operationsforschung und Statistik},
-volume={7},
-number={1},
-pages={51--68},
-year={1976},
-publisher={Taylor \& Francis}
-}
-
-
-@article{taylor2013real,
-title={Real-time individual predictions of prostate cancer recurrence using joint models},
-author={Taylor, Jeremy M.G. and Park, Yongseok and Ankerst, Donna P. and Proust-Lima, Cecile and Williams, Scott and Kestin, Larry and Bae, Kyoungwha and Pickles, Tom and Sandler, Howard},
-journal={Biometrics},
-volume={69},
-number={1},
-pages={206--213},
-year={2013},
-publisher={Wiley}
-}
-
-@article{rizopoulosJMbayes,
-author = {Dimitris Rizopoulos},
-title = {The {R} Package {JMbayes} for Fitting Joint Models for Longitudinal and Time-to-Event Data Using {MCMC}},
-journal = {Journal of Statistical Software},
-volume = {72},
-number = {7},
-year = {2016},
-issn = {1548-7660},
-pages = {1--46},
-publisher={Foundation for Open Access Statistics}
-}
-
-@article{sokolova2009systematic,
-title={A systematic analysis of performance measures for classification tasks},
-author={Sokolova, Marina and Lapalme, Guy},
-journal={Information Processing \& Management},
-volume={45},
-number={4},
-pages={427--437},
-year={2009},
-publisher={Elsevier}
-}
-
-@article{rizopoulos2014bma,
-title={Combining Dynamic Predictions From Joint Models for Longitudinal and Time-to-Event Data Using {Bayesian} Model Averaging},
-author={Rizopoulos, Dimitris and Hatfield, Laura A. and Carlin, Bradley P. and Takkenberg, Johanna J.M.},
-journal={Journal of the American Statistical Association},
-volume={109},
-number={508},
-pages={1385--1397},
-year={2014},
-publisher={Taylor \& Francis}
-}
-
-
-@article{brown2009assessing,
-title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric {HIV/AIDS}},
-author={Brown, Elizabeth R.},
-journal={The Annals of Applied Statistics},
-volume={3},
-number={3},
-pages={1163--1182},
-year={2009},
-publisher={Institute of Mathematical Statistics}
-}
-
-@article{lang2004bayesian,
-title={{Bayesian P-splines}},
-author={Lang, Stefan and Brezger, Andreas},
-journal={Journal of Computational and Graphical Statistics},
-volume={13},
-number={1},
-pages={183--212},
-year={2004},
-publisher={Taylor \& Francis}
-}
-
-@article{eilers1996flexible,
-title={Flexible smoothing with {B-splines} and penalties},
-author={Eilers, Paul HC and Marx, Brian D},
-journal={Statistical Science},
-pages={89--121},
-year={1996},
-volume={11},
-number={2},
-publisher={Institute of Mathematical Statistics}
-}
-
-@article{bokhorst2016decade,
-title={A decade of active surveillance in the {PRIAS} study: an update and evaluation of the criteria used to recommend a switch to active treatment},
-author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and {\relax PRIAS study group}},
-journal={European Urology},
-volume={70},
-number={6},
-pages={954--960},
-year={2016},
-publisher={Elsevier}
-}
-
-@article{drizopoulosPersScreening,
-author = {Rizopoulos, Dimitris and Taylor, Jeremy M. G. and Van Rosmalen, Joost and Steyerberg, Ewout W. and Takkenberg, Johanna J. M.},
-title = {Personalized screening intervals for biomarkers using joint models for longitudinal and survival data},
-journal = {Biostatistics},
-volume = {17},
-number = {1},
-pages = {149--164},
-year = {2016},
-publisher={Oxford University Press}
-}
-
-@article{oMahonyOptimaInterval,
-title={The Influence of Disease Risk on the Optimal Time Interval between Screens for the Early Detection of Cancer: A Mathematical Approach},
-author={O’Mahony, James F and van Rosmalen, Joost and Mushkudiani, Nino A and Goudsmit, Frans-Willem and Eijkemans, Marinus JC and Heijnsdijk, Eveline AM and Steyerberg, Ewout W and Habbema, J Dik F},
-journal={Medical Decision Making},
-volume={35},
-number={2},
-pages={183--195},
-year={2015},
-publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
-@article{parmigiani1998designing,
-title={Designing observation times for interval censored data},
-author={Parmigiani, Giovanni},
-journal={Sankhy{\=a}: The Indian Journal of Statistics, Series A},
-pages={446--458},
-volume = {60},
-number = {3},
-year={1998},
-publisher={JSTOR}
-}
-
-@article{bebu2017OptimalScreening,
-author = {Bebu, Ionut and Lachin, John M.},
-title = {Optimal screening schedules for disease progression with application to diabetic retinopathy},
-journal = {Biostatistics},
-year = {2017},
-doi = {10.1093/biostatistics/kxx009},
-note={\mbox{doi}:\url{10.1093/biostatistics/kxx009}},
-URL = { + https://doi.org/10.1093/biostatistics/kxx009},
-publisher={Oxford University Press}
-}
-
-@article{assel2017,
-author = {Assel, Melissa and Dahlin, Anders and Ulmert, David and Bergh, Anders and Stattin, Pär and Lilja, Hans and Vickers, Andrew J.},
-title = {Association Between Lead Time and Prostate Cancer Grade: Evidence of Grade Progression from Long-term Follow-up of Large Population-based Cohorts Not Subject to Prostate-specific Antigen Screening},
-journal = {European Urology},
-year = {2017},
-issn = {0302-2838},
-doi = {10.1016/j.eururo.2017.10.004},
-url = {http://www.sciencedirect.com/science/article/pii/S0302283817308606},
-note= {\mbox{doi}: \url{10.1016/j.eururo.2017.10.004}}
-}
-
-@article {landmarking2017,
-author = {Rizopoulos, Dimitris and Molenberghs, Geert and Lesaffre, Emmanuel M.E.H.},
-title = {Dynamic predictions with time-dependent covariates in survival analysis using joint modeling and landmarking},
-journal = {Biometrical Journal},
-year = {2017},
-issn = {1521-4036},
-url = {http://dx.doi.org/10.1002/bimj.201600238},
-doi = {10.1002/bimj.201600238},
-note={\mbox{doi}:\url{10.1002/bimj.201600238}},
-}
-
-@article{tsiatis2004joint,
-title={Joint modeling of longitudinal and time-to-event data: an overview},
-author={Tsiatis, Anastasios A and Davidian, Marie},
-journal={Statistica Sinica},
-volume={14},
-number={3},
-pages={809--834},
-year={2004},
-publisher={Institute of Statistical Science, Academia Sinica}
-}
-
-@book{rizopoulos2012joint,
-title={Joint Models for Longitudinal and Time-to-Event Data: With Applications in R},
-author={Rizopoulos, Dimitris},
-year={2012},
-publisher={CRC Press},
-isbn = {9781439872864}
-}
-
-@book{bergerDecisionTheory,
-title={Statistical Decision Theory and Bayesian Analysis},
-author={Berger, James O},
-year={1985},
-isbn = {9781475742862},
-publisher={Springer Science \& Business Media}
-}
-
-@book{robertBayesianChoice,
-title={The {Bayesian} choice: from decision-theoretic foundations to computational implementation},
-author={Robert, Christian},
-year={2007},
-isbn = {9780387715995},
-publisher={Springer Science \& Business Media}
-}
-
-@article{welty2015extended,
-title={Extended followup and risk factors for disease reclassification in a large active surveillance cohort for localized prostate cancer},
-author={Welty, Christopher J and Cowan, Janet E and Nguyen, Hao and Shinohara, Katsuto and Perez, Nannette and Greene, Kirsten L and Chan, June M and Meng, Maxwell V and Simko, Jeffry P and Cooperberg, Matthew R and Carroll, Peter R},
-journal={The Journal of Urology},
-volume={193},
-number={3},
-pages={807--811},
-year={2015},
-publisher={Elsevier}
-}
-
-@article{tosoian2011active,
-title={Active surveillance program for prostate cancer: an update of the {Johns Hopkins} experience},
-author={Tosoian, Jeffrey J and Trock, Bruce J and Landis, Patricia and Feng, Zhaoyong and Epstein, Jonathan I and Partin, Alan W and Walsh, Patrick C and Carter, H Ballentine},
-journal={Journal of Clinical Oncology},
-volume={29},
-number={16},
-pages={2185--2190},
-year={2011},
-publisher={American Society of Clinical Oncology}
-}
-
-@article{keegan2012active,
-title={Active surveillance for prostate cancer compared with immediate treatment},
-author={Keegan, Kirk A and Dall'Era, Marc A and Durbin-Johnson, Blythe and Evans, Christopher P},
-journal={Cancer},
-volume={118},
-number={14},
-pages={3512--3518},
-year={2012},
-publisher={Wiley}
-}
-
-@article{cairns2010guidelines,
-  title={Guidelines for colorectal cancer screening and surveillance in moderate and high risk groups (update from 2002)},
-  author={Cairns, Stuart R and Scholefield, John H and Steele, Robert J and Dunlop, Malcolm G and Thomas, Huw JW and Evans, Gareth D and Eaden, Jayne A and Rutter, Matthew D and Atkin, Wendy P and Saunders, Brian P and Lucassen, Anneke and Jenkins, Paul and Fairclough, Peter D and Woodhouse, Christopher R J and {\relax developed on behalf of
-The British Society of Gastroenterology, and the Association of Coloproctology
-for Great Britain and Ireland}},
-  journal={Gut},
-  volume={59},
-  number={5},
-  pages={666--689},
-  year={2010},
-  publisher={BMJ Publishing Group}
-}
-
-@article{mueller1988severe,
-  title={Severe acute pancreatitis after percutaneous biopsy of the pancreas},
-  author={Mueller, PR and Miketic, LM and Simeone, JF and Silverman, SG and Saini, SANJAY and Wittenberg, J and Hahn, PF and Steiner, E and Forman, BH},
-  journal={American Journal of Roentgenology},
-  volume={151},
-  number={3},
-  pages={493--494},
-  year={1988},
-  publisher={Am Roentgen Ray Soc}
-}
-
-@article{loeb2013systematic,
-title={Systematic review of complications of prostate biopsy},
-author={Loeb, Stacy and Vellekoop, Annelies and Ahmed, Hashim U and Catto, James and Emberton, Mark and Nam, Robert and Rosario, Derek J and Scattoni, Vincenzo and Lotan, Yair},
-journal={European Urology},
-volume={64},
-number={6},
-pages={876--892},
-year={2013},
-publisher={Elsevier}
-}
-
-@article{GlobalCancerStats2012,
-title={Global cancer statistics, 2012},
-author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
-journal={CA: A Cancer Journal for Clinicians},
-volume={65},
-number={2},
-pages={87--108},
-year={2015},
-publisher={Wiley}
-}
-
-@article{potoskyPSAcancer,
-author = {Potosky, Arnold L and Miller, Barry A and Albertsen, Peter C and Kramer, Barnett S},
-title = {The role of increasing detection in the rising incidence of prostate cancer},
-journal = {JAMA},
-volume = {273},
-number = {7},
-pages = {548-552},
-year = {1995},
-publisher={American Medical Association}
-}
-
-@article {USACancerStats2017,
-author = {Siegel, Rebecca L and Miller, Kimberly D and Jemal, Ahmedin},
-title = {Cancer statistics, 2017},
-journal = {CA: A Cancer Journal for Clinicians},
-volume = {67},
-number = {1},
-pages = {7--30},
-year = {2017},
-publisher={Wiley}
 }
